BugFix:: dropdown widget overflow issue

--- a/redesign/assets/css/_component_dropdown.less
+++ b/redesign/assets/css/_component_dropdown.less
@@ -3,8 +3,6 @@
 .drpdwn-wdgt {
   position: absolute;
   right: 0;
-  overflow-x: visible;
-  overflow-y: hidden;
   float: right;
 
   width: @dropdown-widget-width - 2*@border-width;
@@ -22,6 +20,8 @@
   transition: max-height .5s ease-in-out;
 
   .ellipsis();
+  overflow: hidden;
+  
   &__menu {
     height: 30px - 2*@border-width;
     padding-right: 10px;
